2004-09-25  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): now sets bid_count and bid_amount in the Result objects

	* lib/WWW/Search/Ebay/Motors.pm (native_setup_search): new backend!

	* t/motors.t: new test

	* lib/WWW/Search/Ebay.pm: added pod for how to search one category

2004-09-16  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm (date_to_rel): new function;
	(parse_tree): fix date sort;
	different date format in change_date;

2004-08-20  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/BuyItNow.pm: new file

	* t/buyitnow.t (my_test): new file

2004-07-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): fix for parsing result count

2004-06-05  Kingpin  <mthurn@verizon.net>

	* t/stores.t: new file

	* lib/WWW/Search/Ebay/Stores.pm: new file

	* lib/WWW/Search/Ebay.pm (currency_pattern): new function

2004-04-17  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (native_setup_search): new URL / CGI options
	(parse_tree): handle new HTML formatting

2004-04-08  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm (parse_tree): fix undef warning

	* lib/WWW/Search/Ebay.pm (parse_tree): handle new HTML formatting

2003-12-21  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/Completed.pm: removed because searching completed auctions now requires registered user login
	
	* t/completed.t: removed because searching completed auctions now requires registered user login

2003-12-06  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm: fixed so that "featured" auctions are put into the properly sorted order

2003-11-13  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): in change_date, convert nbsp to regular space

2003-10-27  Kingpin  <mthurn@verizon.net>

	* t/enddate.t: beefed-up tests

	* t/basic.t: separated test files

	* t/completed.t: beefed-up tests
